--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -33,6 +33,8 @@ monitor=DVI-D-1,1680x1050,1920x0,1
 # Execute your favorite apps at launch
 exec-once = swww init
 exec-once = nm-applet
+exec-once = dunst
+exec-once = hypridle
 # exec-once = swww img --transition-type wipe --transition-angle 30 --transition-step 40 ~/.config/Backgrounds/citycotton.jpeg
 
 exec-once = ~/.config/hypr/xdg-portal-hyprland
@@ -315,6 +317,8 @@ $mainMod = SUPER
 bind = $mainMod, RETURN, exec, kitty  #open the terminal
 bind = $mainMod, W, killactive, # close the active window
 bind = $mainMod, L, exec, hyprlock # sh ~/.config/sys-scripts/lockscreen.sh
+bind = $mainMod, K, exec, nmcli device disconnect wlan0 && hyprlock # sh ~/.config/sys-scripts/lockscreen.sh
+bind = $mainMod, O, exec, nmcli device connect wlan0 # sh ~/.config/sys-scripts/lockscreen.sh
 bind = $mainMod, M, exec, wlogout --protocol layer-shell # show the logout window
 bind = $mainMod SHIFT, M, exit, # Exit Hyprland all together no (force quit Hyprland)
 bind = $mainMod, F, fullscreen
@@ -328,18 +332,12 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, S, exec, grim -g "$(slurp)" - | swappy -f - # take a screenshot
 
-# ROG G15 Strix (2021) Specific binds
-bind = ,156, exec, rog-control-center # ASUS Armory crate key
-bind = ,211, exec, asusctl profile -n; pkill -SIGRTMIN+8 waybar # Fan Profile key switch between power profiles
 bind = ,121, exec, pamixer -t # Speaker Mute FN+F1
 bind = ,122, exec, pamixer -d 5 # Volume lower key
 bind = ,123, exec, pamixer -i 5 # Volume Higher key
 bind = ,256, exec, pamixer --default-source -t # Mic mute key
 bind = ,232, exec, brightnessctl set 10%- # Screen brightness down FN+F7
 bind = ,233, exec, brightnessctl set 10%+ # Screen brightness up FN+F8
-bind = ,237, exec, brightnessctl -d asus::kbd_backlight set 33%- # Keyboard brightness down FN+F2
-bind = ,238, exec, brightnessctl -d asus::kbd_backlight set 33%+ # Keyboard brightnes up FN+F3
-bind = ,210, exec, asusctl led-mode -n # Switch keyboard RGB profile FN+F4
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -371,8 +369,7 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-bind = $mainMod, X, exec, pkill wlsunset
-bind = $mainMod, C, exec, wlsunset -T 4500
+bind = $mainMod, C, exec, pkill wlsunset || wlsunset -T 4500
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
@@ -380,6 +377,4 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
-
-
 
