--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -4,11 +4,11 @@ print_info() {
     info ""
     prin "$(color 189)┌─────────\n System Information \n─────────┐"
     info " ​ ​ $(color 153) " distro
-    info " ​ ​ $(color 153) " krnl
+    info " ​ ​ $(color 153) " kernel
     info " ​ ​ $(color 153)󰍹 " de
     info " ​ ​ $(color 153) " shell
     info " ​ ​ $(color 153) " term
-    info " ​ ​ $(color 153)󰏖 " pckgs
+    info " ​ ​ $(color 153)󰏖 " packages
     info " ​ ​ $(color 153)󰢮 " gpu
     prin "$(color 189)└──────────────────────────────────────┘"
 
