--- a/hypr/colors.conf
+++ b/hypr/colors.conf
@@ -1,8 +1,13 @@
-
+$border_act = rgb(9BA4FF)
+$border_tail = rgb(B9DBFF)
+$border_inact = 0xff414868 # rgb(2f2521)
+$hl_ctime = rgb(9BA4FF)
+$color_grey = rgba(242, 243, 244, 0.5) # rgba(209, 209, 209, 0.75)
+$hl_fcolor = rgb(b9dbff)
 
 general {
-  col.active_border = rgb(9BA4FF) rgb(9BA4FF) rgb(9BA4FF) rgb(9BA4FF) rgb(9BA4FF) rgb(B9DBFF) 270def  # rgb(7F858A) rgb(e9b9ff) rgb(7F858A) #384553 #7F858A
-  col.inactive_border = 0xff414868 # rgb(2f2521)
+  col.active_border = $border_act $border_act $border_act $border_act $border_act $border_tail 270def  # rgb(7F858A) rgb(e9b9ff) rgb(7F858A) #384553 #7F858A
+  col.inactive_border = $border_inact 
 }
 
 
