--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -1,15 +1,15 @@
 source = ~/.config/hypr/colors.conf
 
+$im_path = ~/.background
+
 # BACKGROUND
 background {
-    monitor =
-    #path = screenshot
-    path = ~/.config/Backgrounds/mntfuji.jpg
-    #color = $background
-    # blur_size = 7
-    # blur_passes = 1
-    contrast = 1
-    brightness = 0.5
+    monitor =    
+    path = $im_path
+    blur_size = 2
+    blur_passes = 1
+    contrast = 1.6
+    brightness = 1
     vibrancy = 0.2
     vibrancy_darkness = 0.2
 }
@@ -25,7 +25,7 @@ general {
 
 # INPUT FIELD
 input-field {
-    monitor =
+    monitor = 
     size = 250, 60
     outline_thickness = 2
     dots_size = 0.2 # Scale of input-field height, 0.2 - 0.8
@@ -33,10 +33,11 @@ input-field {
     dots_center = true
     outer_color = rgba(0, 0, 0, 0)
     inner_color = rgba(0, 0, 0, 0.2)
-    font_color = $foreground
-    fade_on_empty = false
+    font_color = $hl_fcolor
+    fade_on_empty = true
     rounding = -1
     check_color = rgb(204, 136, 34)
+    fail_color = rgb(da9367)
     placeholder_text = <i><span foreground="##cdd6f4">Input Password...</span></i>
     hide_input = false
     position = 0, -200
@@ -44,30 +45,48 @@ input-field {
     valign = center
 }
 
-# DATE
+# Hours
 label {
-  monitor =
-  text = cmd[update:1000] echo "$(date +"%A, %B %d")"
-  color = rgba(242, 243, 244, 0.75)
-  font_size = 22
-  font_family = JetBrains Mono
-  position = 0, 300
-  halign = center
-  valign = center
+    monitor =
+    text = cmd[update:1000] echo "<b><big> $(date +"%I") </big></b>"
+    color = $hl_ctime
+    font_size = 112
+    font_family = Geist Mono 10
+    shadow_passes = 3
+    shadow_size = 4
+
+    position = 0, 300 # 220
+    halign = center
+    valign = center
 }
 
-# TIME
+# Minutes
 label {
-  monitor = 
-  text = cmd[update:1000] echo "$(date +"%-I:%M")"
-  color = rgba(242, 243, 244, 0.75)
-  font_size = 95
-  font_family = JetBrains Mono Extrabold
-  position = 0, 200
-  halign = center
-  valign = center
+    monitor =
+    text = cmd[update:1000] echo "<b><big> $(date +"%M") </big></b>"
+    color = $hl_ctime
+    font_size = 112
+    font_family = Geist Mono 10
+    shadow_passes = 3
+    shadow_size = 4
+
+    position = 0, 160 # 80
+    halign = center
+    valign = center
 }
 
+# Week
+label {
+    monitor =
+    text = cmd[update:100000] echo "<b> "$(date +'%d %b')" </b>"
+    color = $color_grey
+    font_size = 18
+    font_family = JetBrainsMono Nerd Font 10
+
+    position = 0, -15
+    halign = center
+    valign = center
+}
 
 
 # Profile Picture
@@ -83,6 +102,22 @@ image {
 }
 
 
+# WHO AM I? (srsly)
+label {
+    monitor =
+    text = cmd[update:1000] echo "$(sh ~/.config/sys-scripts/whoami.sh)"
+    color = $foreground
+    font_size = 13
+    font_family = JetBrains Mono Bold
+    color = $color_grey # rgba(242, 243, 244, 0.75)
+    position = 0, 15
+    shadow_passes = 3
+    shadow_size = 4
+
+    halign = center
+    valign = center
+}
+
 # # Desktop Environment
 # image {
 #     monitor =
@@ -96,29 +131,32 @@ image {
 # }
 #
 # # CURRENT SONG
+# TODO later
 # label {
 #     monitor =
-#     text = cmd[update:1000] echo "$(sh ~/.config/waybar/scripts/spotify/scroll_status.sh)" 
+#     text = cmd[update:1000] echo "Playing - $(sh ~/.config/sys-scripts/spotify/spotify_status.sh)" 
 #     color = $foreground
 #     #color = rgba(255, 255, 255, 0.6)
-#     font_size = 18
-#     font_family = Metropolis Light, Font Awesome 6 Free Solid
-#     position = 0, 50
+#     font_size = 15
+#     font_family = JetBrains Mono Semibold
+#     position = 750, 35
 #     halign = center
 #     valign = bottom
 # }
 #
+# WHO AM I? (srsly)
 # label {
 #     monitor =
-#     text = cmd[update:1000] echo "$(/home/justin/Documents/Scripts/whoami.sh)"
+#     text = cmd[update:1000] echo "$(sh ~/.config/sys-scripts/whoami.sh)"
 #     color = $foreground
-#     font_size = 14
-#     font_family = JetBrains Mono
-#     position = 0, -10
+#     font_size = 35
+#     font_family = JetBrains Mono Bold
+#     color = rgba(242, 243, 244, 0.75)
+#     position = 0, -475
 #     halign = center
 #     valign = top
 # }
-#
+# #
 # label {
 #     monitor =
 #     text = cmd[update:1000] echo "$(/home/justin/Documents/Scripts/battery.sh)"
@@ -139,4 +177,39 @@ image {
 #     position = -20, -10
 #     halign = right
 #     valign = top
+# }
+# # Today
+# label {
+#     monitor =
+#     text = cmd[update:18000000] echo "<b><big> "$(date +'%A')" </big></b>"
+#     color = rgba(242, 243, 244, 0.75)
+#     font_size = 22
+#     font_family = JetBrainsMono Nerd Font 10
+
+#     position = 0, 30
+#     halign = center
+#     valign = center
+# }
+# # DATE 22
+# label {
+#   monitor =
+#   text = cmd[update:1000] echo "$(date +"%A, %B %d")"
+#   color = rgba(242, 243, 244, 0.75)
+#   font_size = 40
+#   font_family = JetBrains Mono
+#   position = 0, 300
+#   halign = center
+#   valign = center
+# }
+
+# # TIME
+# label {
+#   monitor = 
+#   text = cmd[update:1000] echo "$(date +"%-I:%M")"
+#   color = rgba(242, 243, 244, 0.75)
+#   font_size = 95
+#   font_family = JetBrains Mono Extrabold
+#   position = 0, 200
+#   halign = center
+#   valign = center
 # }
