--- a/style-change/add_config/hypr-confs/hyprland.conf
+++ b/style-change/add_config/hypr-confs/hyprland.conf
@@ -6,13 +6,19 @@
 # ffccaf 7CBBF3
 # 2f2521
 
+env=LIBVA_DRIVER_NAME,nvidia
+env=XDG_SESSION_TYPE,wayland
+env=GBM_BACKEND,nvidia-drm
+env=__GLX_VENDOR_LIBRARY_NAME,nvidia
+env=WLR_NO_HARDWARE_CURSORS,1
+
 source = ~/.config/hypr/colors.conf
 #
 # $busy_color=ff775b
 # $active_color=C1B5C7
 # $inactive_color=2f2521
 
-monitor=DP-3,1920x1080,0x0,1
+monitor=DP-1,1920x1080,0x0,1
 monitor=DVI-D-1,1680x1050,1920x0,1
 
 # Dual monitor example on G15 Strix
@@ -26,6 +32,9 @@ monitor=DVI-D-1,1680x1050,1920x0,1
 
 # Execute your favorite apps at launch
 exec-once = swww init
+exec-once = nm-applet
+exec-once = dunst
+exec-once = hypridle
 # exec-once = swww img --transition-type wipe --transition-angle 30 --transition-step 40 ~/.config/Backgrounds/citycotton.jpeg
 
 exec-once = ~/.config/hypr/xdg-portal-hyprland
@@ -34,7 +43,7 @@ exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESK
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = hyprctl setcursor Breeze 24
 # exec=~/.config/eww/startup
-exec-once = waybar
+exec-once = sh ~/.config/sys-scripts/launch-waybar.sh # waybar
 # exec = swaybg -m fill -i ~/.config/Backgrounds/citycotton.jpeg
 
 # Source a file (multi-file configs)
@@ -60,9 +69,9 @@ input {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 5
-    gaps_out = 20
-    border_size = 2
+    gaps_in = 5 # 2 # 5
+    gaps_out = 15 # 4 # 20
+    border_size = 2 # 1 # 1.8   # 1.2
     #col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     #col.active_border=rgb(cdd6f4)
     # #col.inactive_border = rgba(595959aa)
@@ -78,13 +87,22 @@ misc {
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    rounding = 10
-    blur = 1
-    blur_size = 5
-    blur_passes = 2
-    blur_new_optimizations = on
+    # rounding = 6 # 10
+    
+    blur {
+      enabled=1
+      size=7 # 5
+      passes=3 # 2
+      new_optimizations=1
+    }
+
+    # blur = 1
+    # blur_size = 5
+    # blur_passes = 2
+    # blur_new_optimizations = 1
     blurls = lockscreen
-    blurls=waybar
+    # blurls=waybar
+    
     drop_shadow = yes
     shadow_range = 4
     shadow_render_power = 3
@@ -126,10 +144,13 @@ decoration {
 #}
 
 windowrulev2 = opacity 0.94 0.94,class:^(Slack|WebCord)$
+# windowrulev2 = opacity 1 1,class:^(neovide)$
 
-windowrulev2 = opacity 0.8 0.8,class:^(Code|Spotify)$
+windowrulev2 = opacity 0.8 0.8,class:^(Spotify)$
+# windowrulev2 = opacity 0.6 0.6,class:^(kitty)$
+windowrulev2 = opacity 0.85 0.85,class:^(Code)$
 
-windowrulev2 = tile,class:^(neovide)$
+# windowrulev2 = tile,class:^(neovide)$
 
 
 windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
@@ -140,21 +161,27 @@ windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
 # windowrulev2 = float, class:^(kitty)$.t
 # not to me btw
 
-#; animations {
-#;     enabled = yes
-#; 
-#;     bezier = curve, 0.76, 0, 0.24, 1
-#;     bezier = smoothIn, 0.25, 1, 0.5, 1
-#;     bezier = smoothOut, 0.36, 0, 0.66, -0.56
-#;     bezier = overshot, 0,.7,.3,1
-#; 
-#;     animation = windows, 1, 4, smoothIn, slide
-#;     animation = windowsOut, 1, 4, smoothOut, slide
-#;     animation = border, 1, 10, default
-#;     animation = fade, 1, 10, smoothIn
-#;     animation = fadeDim, 1, 10, smoothIn
-#;     animation = workspaces, 1, 6, curve, slidevert
-#; }
+animations {
+     enabled = yes
+ 
+     bezier = curve, 0.76, 0, 0.24, 1
+     bezier = smoothIn, 0.25, 1, 0.5, 1
+     bezier = smoothOut, 0.36, 0, 0.66, -0.56
+     bezier = overshot, 0,.7,.3,1
+     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+     bezier = liner, 1, 1, 1, 1
+
+     animation = windows, 1, 5, myBezier
+     # animation = windows, 1, 4, smoothIn, slide
+     animation = windowsOut, 1, 4, smoothOut #, slide
+     # animation = border, 1, 10, default
+     animation = fade, 1, 10, smoothIn
+     animation = fadeDim, 1, 10, smoothIn
+     animation = workspaces, 1, 6, curve, slidevert
+    
+    animation = border, 1, 10, liner
+    animation = borderangle, 1, 35, liner, loop
+ }
 
 # animations {
 #     enabled = yes
@@ -184,7 +211,21 @@ windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
 #     # animation = workspaces, 1, 5, wss, slide
 # }
 
-
+# animations {
+#     enabled = yes
+#
+#     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
+#
+#     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+#
+#     animation = windows, 1, 5, myBezier
+#     animation = windowsOut, 1, 5, default, popin 80%
+#     animation = border, 1, 10, default
+#     animation = borderangle, 1, 8, default
+#     animation = fade, 1, 7, default
+#     animation = workspaces, 1, 5, default
+#     animation = specialWorkspace, 1, 5, myBezier, slidevert
+# }
 
 # ▄▀█ █▄░█ █ █▀▄▀█ ▄▀█ ▀█▀ █ █▀█ █▄░█
 # █▀█ █░▀█ █ █░▀░█ █▀█ ░█░ █ █▄█ █░▀█
@@ -192,24 +233,24 @@ windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
 
 # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
-animations {
-    enabled = yes
-
-    # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
-    bezier=overshot,0.05,0.9,0.1,1.05
-    # bezier=exit,0.9,-.2,0.95,0.05
-    bezier = winOut, 0.3, -0.3, 0, 1
-    bezier = liner, 1, 1, 1, 1
-    
-    animation = windows, 1, 5, overshot, slide
-    animation = windowsOut, 1, 5, winOut, slide
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default, loop
-    # animation = borderangle, 1, 30, liner, loop
-    animation = fade, 1, 10, default
-    animation = workspaces, 1, 6, default
-}
+# animations {
+#     enabled = yes
+#
+#     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
+#
+#     bezier=overshot,0.05,0.9,0.1,1.05
+#     # bezier=exit,0.9,-.2,0.95,0.05
+#     bezier = winOut, 0.3, -0.3, 0, 1
+#     bezier = liner, 1, 1, 1, 1
+#     
+#     animation = windows, 1, 5, overshot, slide
+#     animation = windowsOut, 1, 5, winOut, slide
+#     animation = border, 1, 10, default
+#     animation = borderangle, 1, 8, default, loop
+#     # animation = borderangle, 1, 30, liner, loop
+#     animation = fade, 1, 10, default
+#     animation = workspaces, 1, 6, default
+# }
 
 
 # prev
@@ -240,7 +281,7 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
+    # new_is_master = true
 }
 
 gestures {
@@ -253,7 +294,8 @@ gestures {
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-device:epic mouse V1 {
+device {
+    name = epic-mouse-v1
     sensitivity = -0.5
 }
 
@@ -274,11 +316,13 @@ $mainMod = SUPER
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, kitty  #open the terminal
 bind = $mainMod, W, killactive, # close the active window
-bind = $mainMod, L, exec, sh ~/.config/hypr/scripts/lockscreen.sh
+bind = $mainMod, L, exec, hyprlock # sh ~/.config/sys-scripts/lockscreen.sh
+bind = $mainMod, K, exec, nmcli device disconnect wlan0 && hyprlock # sh ~/.config/sys-scripts/lockscreen.sh
+bind = $mainMod, O, exec, nmcli device connect wlan0 # sh ~/.config/sys-scripts/lockscreen.sh
 bind = $mainMod, M, exec, wlogout --protocol layer-shell # show the logout window
 bind = $mainMod SHIFT, M, exit, # Exit Hyprland all together no (force quit Hyprland)
 bind = $mainMod, F, fullscreen
-bind = $mainMod, E, exec, thunar # Show the graphical file browser
+bind = $mainMod, E, exec, nautilus # Show the graphical file browser
 
 bind = $mainMod, V, togglefloating
 bind = $mainMod, V, resizeactive, exact 700 400 # Allow a window to float
@@ -288,18 +332,12 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, S, exec, grim -g "$(slurp)" - | swappy -f - # take a screenshot
 
-# ROG G15 Strix (2021) Specific binds
-bind = ,156, exec, rog-control-center # ASUS Armory crate key
-bind = ,211, exec, asusctl profile -n; pkill -SIGRTMIN+8 waybar # Fan Profile key switch between power profiles
 bind = ,121, exec, pamixer -t # Speaker Mute FN+F1
 bind = ,122, exec, pamixer -d 5 # Volume lower key
 bind = ,123, exec, pamixer -i 5 # Volume Higher key
 bind = ,256, exec, pamixer --default-source -t # Mic mute key
 bind = ,232, exec, brightnessctl set 10%- # Screen brightness down FN+F7
 bind = ,233, exec, brightnessctl set 10%+ # Screen brightness up FN+F8
-bind = ,237, exec, brightnessctl -d asus::kbd_backlight set 33%- # Keyboard brightness down FN+F2
-bind = ,238, exec, brightnessctl -d asus::kbd_backlight set 33%+ # Keyboard brightnes up FN+F3
-bind = ,210, exec, asusctl led-mode -n # Switch keyboard RGB profile FN+F4
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -331,6 +369,7 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
+bind = $mainMod, C, exec, pkill wlsunset || wlsunset -T 4500
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
@@ -338,6 +377,4 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
-
-
 
