--- a/hypr/colors.conf
+++ b/hypr/colors.conf
@@ -1,4 +1,4 @@
-$border_act = rgb(9BA4FF)
+$border_act = rgb(FFB69B)
 $border_tail = rgb(B9DBFF)
 $border_inact = 0xff414868 # rgb(2f2521)
 $hl_ctime = rgb(9BA4FF)
