--- a/hypr/colors.conf
+++ b/hypr/colors.conf
@@ -1,4 +1,4 @@
-$border_act = rgb(FFB69B)
+$border_act = rgb(9BA4FF)
 $border_tail = rgb(B9DBFF)
 $border_inact = 0xff414868 # rgb(2f2521)
 $hl_ctime = rgb(9BA4FF)
@@ -6,7 +6,7 @@ $color_grey = rgba(242, 243, 244, 0.5) # rgba(209, 209, 209, 0.75)
 $hl_fcolor = rgb(b9dbff)
 
 general {
-  col.active_border = $border_act $border_act $border_act $border_act $border_act $border_tail 270def  # rgb(7F858A) rgb(e9b9ff) rgb(7F858A) #384553 #7F858A
+  col.active_border = $border_act $border_act $border_act $border_act $border_act $border_tail $border_inact $border_inact 270deg  # rgb(7F858A) rgb(e9b9ff) rgb(7F858A) #384553 #7F858A
   col.inactive_border = $border_inact 
 }
 
