--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -2,13 +2,15 @@
 # https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
 print_info() {
     info ""
-    prin "$(color 222)┌─────────\n System Information \n─────────┐"
-    info " ​ ​ $(color 216) " distro
-    info " ​ ​ $(color 216) " kernel
-    info " ​ ​ $(color 216) " term
-    info " ​ ​ $(color 216)󰏖 " packages
-    info " ​ ​ $(color 216)󰢮 " gpu
-    prin "$(color 222)└──────────────────────────────────────┘"
+    prin "$(color 189)┌─────────\n System Information \n─────────┐"
+    info " ​ ​ $(color 153) " distro
+    info " ​ ​ $(color 153) " kernel
+    info " ​ ​ $(color 153)󰍹 " de
+    info " ​ ​ $(color 153) " shell
+    info " ​ ​ $(color 153) " term
+    info " ​ ​ $(color 153)󰏖 " packages
+    info " ​ ​ $(color 153)󰢮 " gpu
+    prin "$(color 189)└──────────────────────────────────────┘"
 
 }
 
@@ -541,7 +543,7 @@ underline_char="-"
 # Example:
 # separator="->":   'Shell-> bash'
 # separator=" =":   'WM = dwm'
-separator="$(color 215)    "
+separator="$(color 147)    "
 
 # Color Blocks
 
