--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -18,8 +18,7 @@ source = ~/.config/hypr/colors.conf
 # $active_color=C1B5C7
 # $inactive_color=2f2521
 
-monitor=DP-1,1920x1080,0x0,1
-monitor=DVI-D-1,1680x1050,1920x0,1
+monitor=,1920x1080,auto,1,bitdepth,8
 
 # Dual monitor example on G15 Strix
 # eDP-1 is the built in monitor while DP-1 is external
@@ -44,7 +43,6 @@ exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = hyprctl setcursor Breeze 24
 # exec=~/.config/eww/startup
 exec-once = sh ~/.config/sys-scripts/launch-waybar.sh # waybar
-# exec = swaybg -m fill -i ~/.config/Backgrounds/citycotton.jpeg
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -162,74 +160,21 @@ windowrulev2 = noanim,class:^(xwaylandvideobridge)$
 windowrulev2 = nofocus,class:^(xwaylandvideobridge)$
 windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
 
-# windowrulev2 = float, class:^(kitty)$.t
-# not to me btw
-
 animations {
-     enabled = yes
- 
-     bezier = curve, 0.76, 0, 0.24, 1
-     bezier = smoothIn, 0.25, 1, 0.5, 1
-     bezier = smoothOut, 0.36, 0, 0.66, -0.56
-     bezier = overshot, 0,.7,.3,1
-     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-     bezier = liner, 1, 1, 1, 1
+    enabled = yes
 
-     animation = windows, 1, 5, myBezier
-     # animation = windows, 1, 4, smoothIn, slide
-     animation = windowsOut, 1, 4, smoothOut #, slide
-     # animation = border, 1, 10, default
-     animation = fade, 1, 10, smoothIn
-     animation = fadeDim, 1, 10, smoothIn
-     animation = workspaces, 1, 6, curve, slidevert
-    
-    animation = border, 1, 10, liner
-    animation = borderangle, 1, 35, liner, loop
- }
+    # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
-# animations {
-#     enabled = yes
+    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
 
-#     bezier    = overshot, 0.13, 0.99, 0.29, 1.1 
-#     animation = windows, 1, 7, overshot, slide 
-#     animation = windowsIn, 1, 7, overshot, slide 
-#     animation = windowsOut, 1, 7, overshot, slide 
-#     animation = windowsMove, 1, 7, overshot, slide 
-#     animation = border, 1, 10, default
-#     animation = fade, 1, 7, overshot, 
-#     animation = workspaces, 1, 6, overshot, slide 
-
-#     # bezier    = overshot, 0.13, 0.99, 0.29, 1.1 
-#     # animation = windows, 1, 7, overshot, slide 
-#     # animation = border, 1, 10, overshot 
-#     # animation = fade, 1, 7, overshot 
-#     # animation = workspaces, 1, 6, overshot, slide 
-
-#     # bezier = in, 0.5, 1.2, 0.4, 1
-#     # bezier = wss, 0.5, 1.15, 0.4, 1
-#     # bezier = fader, 0.33, 1, 0.68, 1
-#     # bezier = out, 0, 1, 0.6, 1
-#     # animation = windows, 1, 4, in
-#     # animation = border, 1, 10, default
-#     # animation = fade, 1, 7, fader
-#     # animation = workspaces, 1, 5, wss, slide
-# }
-
-# animations {
-#     enabled = yes
-#
-#     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-#
-#     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-#
-#     animation = windows, 1, 5, myBezier
-#     animation = windowsOut, 1, 5, default, popin 80%
-#     animation = border, 1, 10, default
-#     animation = borderangle, 1, 8, default
-#     animation = fade, 1, 7, default
-#     animation = workspaces, 1, 5, default
-#     animation = specialWorkspace, 1, 5, myBezier, slidevert
-# }
+    animation = windows, 1, 5, myBezier
+    animation = windowsOut, 1, 5, default, popin 80%
+    animation = border, 1, 10, default
+    animation = borderangle, 1, 8, default
+    animation = fade, 1, 7, default
+    animation = workspaces, 1, 5, default
+    animation = specialWorkspace, 1, 5, myBezier, slidevert
+}
 
 # ▄▀█ █▄░█ █ █▀▄▀█ ▄▀█ ▀█▀ █ █▀█ █▄░█
 # █▀█ █░▀█ █ █░▀░█ █▀█ ░█░ █ █▄█ █░▀█
